src/objects/Transaction_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TX-{00000}</displayFormat>
        <label>TX Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Inactive_Contact_No_Transaction_Entry_VR</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Contact__r.Status__c , &quot;Inactive&quot;)</errorConditionFormula>
        <errorMessage>Contact is Inactive you can not create the Transaction Entry on this Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_Debit_Amount_Allowed_Per_Entry_VR</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;Debit&quot;) , Amount__c &gt;  Contact__r.Transaction_Limit__r.Maximum_Debit_Allowed_per_Transaction__c)</errorConditionFormula>
        <errorMessage>You can not debit Amount more then Allowed per transaction entry</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Balance_VR</fullName>
        <active>true</active>
        <errorConditionFormula>((Contact__r.Available_Balance__c - Amount__c) &lt; 3000 || (Contact__r.Available_Balance__c &lt; 3000) )&amp;&amp; ISPICKVAL( Type__c , &quot;Debit&quot;)</errorConditionFormula>
        <errorMessage>Your Available balance is below 3000, So this Transaction can not be created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Check_TX_Date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(OR(ISNEW(), ISCLONE()), Transaction_Date__c &lt;&gt; TODAY()),
ISCHANGED(Transaction_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Transaction_Date__c</errorDisplayField>
        <errorMessage>Transaction date can&apos;t be changed or greater/less than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_check_Tx_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL( PRIORVALUE( Status__c ) , &quot;Completed&quot;),ISPICKVAL( PRIORVALUE( Status__c ) , &quot;Cancelled.&quot;)),ISCHANGED( Status__c ))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status can not changed</errorMessage>
    </validationRules>
</CustomObject>